RESOLVED FIXED27854
crash at WebCore::AXObjectCache::notificationPostTimerFired
https://bugs.webkit.org/show_bug.cgi?id=27854
Summary crash at WebCore::AXObjectCache::notificationPostTimerFired
chris fleizach
Reported 2009-07-30 13:46:20 PDT
accessibility related crash. the accessibility object is not outliving the timer notification
Attachments
patch (2.52 KB, patch)
2009-07-30 14:02 PDT, chris fleizach
darin: review+
chris fleizach
Comment 1 2009-07-30 14:02:12 PDT
chris fleizach
Comment 2 2009-07-30 14:02:39 PDT
here the crash bt 53 com.apple.AppKit: NSAccessibilityPostNotification + 28 53 com.apple.WebCore: WebCore::AXObjectCache::notificationPostTimerFired + 94 53 com.apple.WebCore: WebCore::Timer<WebCore::AXObjectCache>::fired + 72 53 com.apple.WebCore: WebCore::ThreadTimers::fireTimers + 78 53 com.apple.WebCore: WebCore::ThreadTimers::sharedTimerFiredInternal + 106 53 com.apple.WebCore: WebCore::ThreadTimers::sharedTimerFired + 22 53 com.apple.WebCore: WebCore::timerFired + 63
chris fleizach
Comment 3 2009-07-30 14:03:14 PDT
i was not able to reproduce this crash, but the backtrace is pretty clear. accessibility objects are being released before the timer can fire and the notification can be posted
chris fleizach
Comment 4 2009-07-30 14:03:44 PDT
so there's no layout test, since i could not repro
chris fleizach
Comment 5 2009-07-30 14:51:08 PDT
Note You need to log in before you can comment on or make changes to this bug.