Bug 27854 - crash at WebCore::AXObjectCache::notificationPostTimerFired https://bugs.webkit.org/show_bug.cgi?id=27854

Canonical link: https://commits.webkit.org/38210@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46604 268f45cc-cd09-0410-ab3c-d52691b4dbfc